--- a/Express/NODE/.env
+++ b/Express/NODE/.env
@@ -1,3 +1,5 @@
+NODE_ENV="Developement"
 PORT=3000 
 PASS=ms71pWzqrb0xIWdt
-JWT_SECRET_KEY=mysuperKEY123;
+JWT_SECRET_ACCESS_KEY=mysuperaccessKEY123;
+JWT_SECRET_REFRESH_KEY=mysuperrefreshKEY123;
