--- a/Express/NODE/.env
+++ b/Express/NODE/.env
@@ -1,5 +1,7 @@
 NODE_ENV="Developement"
 PORT=3000 
 PASS=ms71pWzqrb0xIWdt
-JWT_SECRET_ACCESS_KEY=mysuperaccessKEY123;
-JWT_SECRET_REFRESH_KEY=mysuperrefreshKEY123;
+JWT_SECRET_ACCESS_KEY=mysuperaccessKEY123
+JWT_SECRET_REFRESH_KEY=mysuperrefreshKEY123
+EMAIL=rajshresth2@gmail.com
+EMAIL_PASSWORD=gffv lrpa pueu aolm
